# VTK_Project

VTK_Project/: CMakeLists.txt  main.cpp
data/: 20181112120247031L.ply
